# tradecli

./: .gitignore  README.md  main.spec  pyproject.toml  schema.sql  settings.json  stocks_transactions.xlsx
.github/workflows/: main.yml
src/: calculator.py  filter_trades.py  load_data.py  main.py  menu.py  migrate.py  planner.py  settings.py  stocks_reader.py  trade.py  utils.py
