[project]
name = "tradercli"
version = "0.1.0"
description = ""
authors = [
    {name = "dev",email = "yasser.harbi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "openpyxl",
    "rich",
    "yfinance (>=0.2.66,<0.3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyinstaller = {version = "^6.17.0", python = ">=3.13,<3.15"}
